css/style.css
/* ... */
.result-item__lodging-type {
  width: 106px;
  margin-right: 6px;
}

.result-item__button {
  display: inline-block;
  padding: 3px 17px;
  margin-right: 2px;

  font-size: 14px;
  line-height: 21px;
  color: #ffffff;
  vertical-align: top;
}

.result-item__button--details {
  background-color: #81b3d2;
}

.result-item__button--details:hover,
.result-item__button--details:focus {
  background-color: #669ec0;
}

.result-item__button--details:active {
  color: rgba(255, 255, 255, 0.3);
  background-color: #5496bd;
}

.result-item__button--book {
  background-color: #766357;
  padding-right: 17px;
}

.result-item__button--book:hover,
.result-item__button--book:focus {
  background-color: #604e43;
}

.result-item__button--book:active {
  color: rgba(255, 255, 255, 0.3);
  background-color: #503e33;
}

.result-item__rating {
  width: 241px;
  margin-left: auto;
}

.result-item__rating-level {
  min-height: 17px;
  margin-top: -1px;
  margin-bottom: 47px;

  background-position: right 0;
  background-repeat: no-repeat;
}

.result-item__rating-level--good {
  background-image: url("../img/rating-good.png");
}

.result-item__rating-level--average {
  background-image: url("../img/rating-average.png");
}

.result-item__rating-level--bad {
  background-image: url("../img/rating-bad.png");
}


.result-item__rating-info {
  width: 89px;
  padding: 3px 5px 3px 16px;
  margin: 0;
  margin-left: 130px;

  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  color: #333333;

  background-color: #f2f2f2;
}

/* Стили футера */

.main-footer {
  position: relative;
  z-index: 3;

  display: -webkit-box;

  display: -ms-flexbox;

  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 35px 0;

  text-align: center;
}

.main-page .main-footer {
  margin-top: -120px;

  background-color: rgba(255, 255, 255, 0.9);
}

.main-footer > * {
  width: 400px;
}

.main-footer__hashtag {
  font-size: 21px;
}

.main-footer__social {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.socials {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 150px;
  padding: 0;
  margin: 0;

  list-style: none;
}

.socials__item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 46px;
  height: 48px;

  color: #ffffff;

  background-color: #81b3d2;
}

.socials__item:hover,
.socials__item:focus {
  background-color: #669ec0;
}

.socials__item:active {
  background-color: #5496bd;
}

.socials__item:active path {
  fill: rgba(255, 255, 255, 0.3);
}


.main-footer__copyright {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  padding-left: 7px;

  font-weight: 400;
}

.main-footer__copyright a {
  position: relative;
  top: 5px;

  margin-left: 8px;
}

.main-footer__copyright a:hover path,
.main-footer__copyright a:focus path{
  fill: #81b3d2;
}

.main-footer__copyright a:active path {
  fill: #bdbbbc;
}

